welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:3: error: illegal start of simple pattern
var:Int = l;
   ^Array1:3: error: '=' expected but ';' found.
var:Int = l;
           ^Array1:9: error: ';' expected but '=' found.
	T[i] = getCouleurSol;
             ^