welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
var:Int = l;
getMondeHauteur = l;
getMondeLargeur = p;
var T = new Array[Color](l)
for (i <- 1 to l)
{
	T[i] = getCouleurSol;
	avance();
}
for (c <- 1 to p)
{
	
}
}
